--- a/package.json
+++ b/package.json
@@ -1,14 +1,9 @@
 {
-  "name": "dotmind",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "server",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
     "build": "cd client && npm run build",
-    "start": "cd server && npm start",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+    "start": "cd server && npm start"
+  }
 }
