--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "build": "cd client && npm run build",
-    "start": "cd server && npm start"
+    "start": "cd client && npm run build && cd ../server && npm run start"
   }
 }
