--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "cd client && npm run build && cd ../server && npm run start"
+    "postinstall": "cd client && npm run build",
+    "start": "cd server && npm start"
   }
 }
