--- a/client/.prettierrc
+++ b/client/.prettierrc
@@ -1,8 +1,8 @@
 {
-  "printWidth": 100,
+  "printWidth": 80,
   "tabWidth": 2,
   "singleQuote": true,
-  "trailingComma": "none",
+  "trailingComma": "es5",
   "bracketSpacing": true,
   "semi": true
 }
