--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "core-js": "^3.1.2",
+    "dom-to-image": "^2.6.0",
+    "downloadjs": "^1.4.7",
     "nes.css": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "vue": "^2.6.10",
