--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "scripts": {
     "heroku-preinstall": "cd client && npm install && cd ../server && npm install",
-    "heroku-postbuild": "cd ../client && npm run build",
+    "heroku-postbuild": "cd client && npm run build",
     "dev:server": "cd server && npm run dev",
     "dev:client": "cd client && npm run serve",
-    "start": "cd ../server && npm start"
+    "start": "cd server && npm start"
   }
 }
