--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "nodemon --exec babel-node ./src/server.js --delay 2",
-    "start": "node ./src/server.js"
+    "start": "node --experimental-modules ./src/server.js"
   },
   "dependencies": {
     "connect-history-api-fallback": "^1.6.0",
